--- a/data/homepage/c-language/c_001.md
+++ b/data/homepage/c-language/c_001.md
@@ -8,7 +8,12 @@
 - 标准由ISO维护（常见版本：C89/C90、C99、C11、C17、C23）。
 
 ## 2. 开发环境
-- 编译器：GCC、Clang、MSVC；Windows常见选择：MinGW-w64 或 Visual Studio（cl）。
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
 - 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
 
 ## 3. 第一个程序
@@ -40,6 +45,10 @@ int main(void) {
 - 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
 - 中文路径/编码问题导致编译报错；终端未切到源文件目录。
 - 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
 
 ## 7. 练习
 - 修改程序打印你的名字与今天日期。
@@ -113,3 +122,1514 @@ int main(void){
 - Clang 文档与工具链：https://clang.llvm.org/docs/
 - MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
 - CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代优化）、MSVC（Windows专用）。
+- 安装示例（Windows）：
+  - MinGW-w64：下载安装器，选择x86_64架构，添加bin到PATH。
+  - Visual Studio：安装社区版，选择C++桌面开发工作负载。
+- IDE配置：VSCode安装C/C++扩展，配置tasks.json与launch.json用于构建与调试。
+- 常见问题：环境变量未设置、缺少依赖库。
+- 构建工具：直接命令行、Make/CMake；编辑器/IDE：VSCode/CLion/VS等。
+
+## 3. 第一个程序
+```c
+#include <stdio.h>
+
+int main(void) {
+    printf("Hello, C!\n");
+    return 0; // 返回0表示程序正常结束
+}
+```
+
+编译与运行（以GCC为例）：
+- gcc hello.c -o hello
+- ./hello  或在Windows下  .\hello.exe
+
+## 4. 程序基本结构
+- 头文件：#include <stdio.h>
+- 入口函数：int main(void) 或 int main(int argc, char* argv[])
+- 语句以分号结尾；代码块使用花括号 {}
+- 标识符由字母、数字和下划线组成，不能以数字开头；区分大小写。
+
+## 5. 注释与风格
+- 单行注释：// ...
+- 多行注释：/* ... */（不可嵌套）
+- 建议使用一致的缩进与命名风格，保持可读性。
+
+## 6. 常见入门坑
+- 漏写分号；花括号配对错误；字符串少写转义字符（如"\n"）。
+- 中文路径/编码问题导致编译报错；终端未切到源文件目录。
+- 忘记包含所需头文件，或函数原型不匹配导致警告/未定义行为。
+- 变量未初始化导致未定义行为。
+- 头文件重复包含无保护导致重定义错误。
+- 混合使用scanf与gets导致缓冲问题。
+- 忽略编译警告，可能隐藏潜在bug。
+
+## 7. 练习
+- 修改程序打印你的名字与今天日期。
+- 写一个程序读取两个整数并输出它们的和。
+- 将printf中的"\n"去掉，观察输出差异并理解缓冲。
+
+## 更多示例
+
+示例A：返回非零退出码并观察操作系统层面的差异
+```c
+#include <stdio.h>
+
+int main(void) {
+    puts("process will exit with code 42");
+    return 42; // 在 shell 中可通过 echo %ERRORLEVEL% (Windows) 或 echo $? (Linux/macOS) 查看
+}
+```
+
+示例B：使用命令行参数
+```c
+#include <stdio.h>
+
+int main(int argc, char *argv[]) {
+    printf("argc=%d\n", argc);
+    for (int i = 0; i < argc; ++i) {
+        printf("argv[%d]=%s\n", i, argv[i]);
+    }
+    return 0;
+}
+```
+
+示例C：不同平台的换行差异
+```c
+#include <stdio.h>
+int main(void) {
+    printf("hello\n"); // 文本模式在Windows可能将\n 翻译为 \r\n；二进制模式不会
+    return 0;
+}
+```
+
+## 练习参考答案（节选）
+
+- 打印名字与日期（可使用宏或手动输入）
+```c
+#include <stdio.h>
+int main(void){
+    printf("Name: Zhang San, Date: %s %s\n", __DATE__, __TIME__);
+    return 0;
+}
+```
+
+- 读取两个整数并输出它们的和
+```c
+#include <stdio.h>
+int main(void){
+    int a, b;
+    if (scanf("%d %d", &a, &b) == 2) {
+        printf("sum=%d\n", a + b);
+    } else {
+        puts("input error");
+    }
+    return 0;
+}
+```
+
+- 去掉 \n 的影响说明：没有换行时，stdout 可能是行缓冲（终端）或全缓冲（文件），在程序异常退出或缓冲未刷新时，输出行可能未及时显示。解决：显式添加\n、调用 fflush(stdout) 或将 stdout 设为无缓冲/行缓冲。
+
+## 参考资料
+- C 语言标准草案（C11 N1570，便于检索）：https://port70.net/~nsz/c/c11/n1570.html
+- GCC 文档（选项、诊断、标准版本选择）：https://gcc.gnu.org/onlinedocs/
+- Clang 文档与工具链：https://clang.llvm.org/docs/
+- MSVC（cl）编译器选项参考：https://learn.microsoft.com/cpp/build/reference/compiler-options
+- CMake 入门（官方教程）：https://cmake.org/cmake/help/latest/guide/tutorial/index.html
+
+## 2. 开发环境
+- 编译器：GCC（开源，跨平台）、Clang（LLVM项目，现代
