--- a/data/homepage/c-language/c_002.md
+++ b/data/homepage/c-language/c_002.md
@@ -1,15 +1,23 @@
-# C语言基础语法：数据类型与表达式
+# C语言基础：数据类型、变量与表达式
 
 目标：掌握基本数据类型、常量与变量、类型转换与表达式求值顺序。
 
-## 1. 基本数据类型与尺寸
-- 整型：char, short, int, long, long long（有/无符号）
-- 浮点：float, double, long double
-- 其他：_Bool（C99）, 枚举 enum
+## 1. 基本数据类型
+- 整数：char (1字节，通常signed/unsigned)，short (2字节)，int (4字节)，long (4/8字节)，long long (8字节)。
+  - signed vs unsigned：unsigned扩展范围但无负数；注意混合运算时的提升。
+  - 范围示例：int 通常-2^31到2^31-1；使用<limits.h>宏如INT_MAX。
+- 浮点：float (4字节，单精度)，double (8字节，双精度)，long double (平台相关，通常12/16字节)。
+  - 精度问题：浮点不是精确的；比较时使用epsilon（如fabs(a-b)<1e-9）。
+- 其他：_Bool (C99，0/1)，void (无类型)，size_t (sizeof结果类型)。
 - 尺寸由实现决定，通过sizeof获取：sizeof(int)
 - 典型关系：sizeof(char)==1 字节；整数有整型提升规则。
 
 ## 2. 常量与变量
+- 常量：整数如42、0x2A(十六进制)、042(八进制)；浮点如3.14、1.23e4；字符'a'、'\n'；字符串"hello"。
+  - 枚举常量：enum Color {RED, GREEN=3, BLUE}；隐式从0递增或指定值。
+- 变量：声明 int x; 初始化 int y=5; 作用域（块、文件、全局）；存储类（auto、static、extern、register）。
+  - 生命周期：自动变量函数调用时分配，static函数间保留值。
+- const限定符：const int z=10; 不可修改，但可用于指针/数组。
 - 整数字面量：10, 0xFF, 0755, 10u, 10L
 - 浮点字面量：1.0, 1e-3, 1.0f
 - 字符与字符串：'A', '\n', "hello"
@@ -25,8 +33,10 @@
 - 逗号运算符与序列点（C11之后为序列点概念被序列规则取代）
 
 ## 4. 类型转换
-- 隐式转换：整型提升、算术转换（如 int 与 double -> double）
-- 显式转换：强制类型转换 (type)expr，注意截断与溢出
+- 隐式：运算中较低类型提升到较高（如int+double转为double）；整数提升（char/short to int）。
+  - 陷阱：signed/unsigned混合可能导致意外（如-1u > 0u）。
+- 显式：(double)int_var；用于精确控制或避免警告。
+- 位级转换：union或memcpy用于类型双关，但注意未定义行为和可移植性。
 - 布尔上下文：C中非零为真、零为假；建议使用显式比较以提高可读性。
 
 ## 5. 求值顺序与未定义行为
@@ -84,3 +94,34 @@ int main(void){
 ## 参考资料
 - C11 标准（整数提升与算术转换章节）：https://port70.net/~nsz/c/c11/n1570.html
 - GCC/Clang关于未定义行为与警告选项：-Wall -Wextra -Wconversion -Wsign-conversion
+
+
+示例A：整数溢出检测
+```c
+#include <limits.h>
+#include <stdio.h>
+int safe_add(int a, int b) {
+    if (b > 0 ? a > INT_MAX - b : a < INT_MIN - b) {
+        puts("overflow");
+        return 0;
+    }
+    return a + b;
+}
+```
+
+示例B：浮点比较
+```c
+#include <math.h>
+#define EPS 1e-9
+if (fabs(a - b) < EPS) // 相等
+```
+
+## 练习
+- 编写程序计算unsigned int的最大值并打印。
+- 实现函数检测浮点数是否为整数（考虑精度）。
+- 写表达式使用位运算交换两个整数无临时变量。
+
+## 更多练习参考答案
+- unsigned max：~(unsigned)0 或 UINT_MAX from <limits.h>。
+- 浮点是否整数：floor(x) == x 但注意大数精度丢失。
+- 交换：a ^= b; b ^= a; a ^= b; 注意自交换问题。
