--- a/data/homepage/c-language/c_003.md
+++ b/data/homepage/c-language/c_003.md
@@ -1,18 +1,21 @@
-# 控制流与函数：从流程到模块化
+# C语言控制流与函数
 
 目标：掌握选择与循环语句、函数声明与定义、作用域与链接、头文件组织与编译单元。
 
-## 1. 控制流语句
-- if / else if / else：选择分支
-- switch / case / default：整型选择，注意break防止贯穿
-- for / while / do-while：循环；for包含初始化、条件、迭代表达式
-- break / continue：控制循环；goto不建议使用
+## 1. 控制流
+- 条件：if (cond) {} else {}；switch (expr) {case val: ... break; default: ...}
+  - switch限制：expr须整数类型；case标签常量；fall-through需注意。
+- 循环：for (init; cond; incr) {}；while (cond) {}；do {} while (cond);
+  - 控制：break退出循环；continue跳过本次迭代；goto label;（慎用）。
+- 陷阱：无限循环、忘记break in switch、循环变量作用域 (C99 for)。
 
 ## 2. 函数
-- 声明与定义：返回类型、参数列表、形参与实参
-- 原型的重要性：避免隐式声明（C99之后禁止）
-- 返回与参数传递：值传递；需要修改外部数据时用指针
-- 递归与尾递归优化（取决于实现）
+- 声明：void func(int param); 原型提供类型检查。
+- 定义：void func(int param) { ... } 值传递：修改param不影响调用者。
+- 作用域：参数块作用域；局部变量自动存储期。
+- 变参：#include <stdarg.h>；va_list, va_start, va_arg, va_end。
+- 递归：函数调用自身；注意栈溢出，尾递归优化依赖编译器。
+- 内联 (C99)：inline void fast_func() {} 建议内联但非强制。
 
 示例：
 ```c
@@ -27,68 +30,41 @@ int main(void) {
 }
 ```
 
-## 3. 作用域、存储期与链接
-- 作用域：块作用域、函数作用域、文件作用域
-- 标识符链接：无链接（局部）、内部链接（static）、外部链接（默认）
-- 存储期：自动（栈）、静态（全局/静态）、动态（堆，malloc/free）
+## 3. 存储期与链接
+- 存储期：自动 (块结束销毁)、静态 (程序生命周期)、分配 (malloc)。
+- 链接：extern (外部链接，可多文件共享)；static (内部链接，文件内)。
+- 线程本地 (C11)：_Thread_local int var; 每个线程独立。
 
 ## 4. 头文件与编译单元
-- 头文件放声明、宏与内联；源文件放定义与实现
-- 头文件保护：#ifndef/#define/#endif 或 #pragma once（非标准但常见）
-- 多文件编译：gcc a.c b.c -o prog 或分别编译后链接
+- 头文件：.h 放声明、宏；使用 #ifndef GUARD #define GUARD ... #endif 保护。
+- 编译单元：每个.c 文件独立编译，链接成可执行。
+- 示例：多文件项目 - main.c 调用 lib.c 函数，通过 lib.h 声明。
 
-## 5. 练习
-- 写一个计算n!的函数与迭代/递归实现，比较性能与栈深度。
-- 使用switch实现一个简易菜单。
-- 将函数声明放入头文件，源文件实现，演示多文件编译。
-
-## 更多示例
-
-示例A：尾递归与普通递归
+## 5. 示例
+示例A：递归阶乘与尾递归优化讨论
 ```c
-#include <stdio.h>
+unsigned fact(unsigned n) { return n<2 ? 1 : n * fact(n-1); }
+```
 
-long fact_rec(long n){
-    return n<=1 ? 1 : n * fact_rec(n-1);
-}
-
-long fact_tail_impl(long n, long acc){
-    return n<=1 ? acc : fact_tail_impl(n-1, n*acc);
-}
-
-long fact_tail(long n){
-    return fact_tail_impl(n, 1);
-}
-
-int main(void){
-    printf("%ld %ld\n", fact_rec(10), fact_tail(10));
+示例B：变参函数求和
+```c
+#include <stdarg.h>
+int sum(int n, ...) {
+    va_list ap; va_start(ap, n);
+    int s=0; for(int i=0; i<n; i++) s += va_arg(ap, int);
+    va_end(ap); return s;
 }
 ```
-说明：尾递归优化是否发生取决于实现与优化级别。
 
-示例B：头文件与源文件
-- mathx.h
-```c
-#ifndef MATHX_H
-#define MATHX_H
-int add(int a, int b);
-#endif
-```
-- mathx.c
-```c
-int add(int a, int b){ return a+b; }
-```
-- main.c
-```c
-#include <stdio.h>
-#include "mathx.h"
-int main(void){ printf("%d\n", add(2,3)); }
-```
-构建：`gcc main.c mathx.c -o app`
+## 6. 练习
+- 实现非递归斐波那契使用循环。
+- 写变参函数打印任意类型参数（需类型标签）。
+- 设计多文件程序：分离计算与主逻辑。
 
-## 练习参考答案（节选）
-- n!：给出迭代与递归版本，比较函数调用开销与栈深度。
-- switch菜单：确保每个case以break结束，default兜底。
+## 更多练习参考答案
+- 斐波那契：使用两个变量迭代，避免栈开销。
+- 变参打印：switch on 类型标签，va_arg相应类型。
+- 多文件：头文件声明函数，源文件定义，main链接使用。
 
 ## 参考资料
 - C 接口与实现组织建议：以头文件暴露API、隐藏实现细节。
