--- a/data/homepage/c-language/c_006.md
+++ b/data/homepage/c-language/c_006.md
@@ -1,8 +1,11 @@
-# 输入输出与文件：与外界交互
+# C语言输入输出与文件操作
 
 目标：深入理解printf/scanf系列函数、文件流操作、缓冲与刷新、二进制与文本模式、错误处理。
 
 ## 1. 标准输入输出
+- printf/scanf：格式化；scanf使用&，小心格式匹配。
+- fgets/fputs：行读写；fgets包含\n，需处理。
+- 流：stdin/stdout/stderr；freopen重定向。
 - printf族：printf/sprintf/snprintf/fprintf；格式说明符与转换说明
 - scanf族：scanf/sscanf/fscanf；输入缓冲与回车残留问题
 - 字符与行：getchar/putchar、fgets/fputs（推荐）vs gets/puts（不安全）
@@ -14,7 +17,9 @@
 - %x/%X（十六进制）、%o（八进制）
 
 ## 2. 文件操作
-- 打开与关闭：fopen/fclose；模式字符串："r", "w", "a", "rb", "w+", "a+" 等
+- fopen/fclose：模式如"r"/"w"/"a"/"b" (二进制)。
+- fread/fwrite：二进制读写；返回实际数量。
+- fseek/ftell/rewind：定位；SEEK_SET/END/CUR。
 - 位置操作：fseek/ftell/rewind；二进制模式避免换行符转换问题
 - 读写操作：fread/fwrite（二进制）、fgetc/fputc（字符）、fgets/fputs（行）
 
@@ -43,14 +48,23 @@ int main(void) {
 ```
 
 ## 3. 缓冲与错误处理
-- 缓冲类型：全缓冲、行缓冲、无缓冲；fflush显式刷新
-- 错误检测：feof/ferror/clearerr；perror打印系统错误信息
+- 缓冲：setvbuf(_IOFBF/_IOLBF/_IONBF)；fflush手动刷新。
+- 错误：ferror/feof/clearerr；perror打印errno消息。
 - 临时文件：tmpfile/tmpnam（安全性考虑，现代建议mkstemp等）
 
-## 4. 练习
-- 写一个函数统计文件中的字符数、行数、单词数。
-- 实现二进制文件的简单读写：将整数数组写入文件，再读回。
-- 处理scanf的输入缓冲问题：连续读取整数与字符串时的清理。
+## 4. 示例
+示例A：安全读取行
+```c
+char buf[256];
+if (fgets(buf, sizeof buf, stdin)) { /* 处理 */ }
+```
+
+示例B：二进制文件拷贝
+```c
+FILE *in = fopen("src.bin", "rb"), *out = fopen("dst.bin", "wb");
+char buf[4096]; size_t n;
+while ((n = fread(buf, 1, sizeof buf, in)) > 0) fwrite(buf, 1, n, out);
+```
 
 ## 更多示例
 
@@ -79,7 +93,15 @@ int main(void){
 }
 ```
 
-## 练习参考答案（节选）
+## 5. 练习
+- 写日志函数追加到文件。
+- 实现文件反转（行或字节）。
+- 处理大文件读写，考虑缓冲。
+
+## 更多练习参考答案
+- 日志：fopen("a")，fprintf，fflush确保写入。
+- 反转：fseek到末尾，反向读行或块。
+- 大文件：循环fread/fwrite，大缓冲减少调用。
 - 统计字符/行/单词数：以fgets读取行，用isspace分词，注意最后一行是否以换行结束。
 - 处理文本/二进制差异：在Windows用"rb"/"wb"避免换行转换。
 
