--- a/data/homepage/c-language/c_008.md
+++ b/data/homepage/c-language/c_008.md
@@ -4,7 +4,10 @@
 
 ## 1. stdlib.h
 - 内存管理：malloc/calloc/realloc/free
-- 转换：atoi/strtol/strtod（建议使用strtol/strtod以处理错误）
+- 转换：atoi/atof/strtol (安全版检查错误)
+- 内存：malloc/free；qsort/bsearch
+- 杂项：rand/srand；exit/abort
+- 陷阱：atoi无错误检测；rand低质量随机
 - 排序与搜索：qsort/bsearch
 - 进程控制：exit/atexit/system（system需谨慎，可能存在安全风险）
 
@@ -164,3 +167,18 @@ int main(void){
 - C 标准库参考（string/stdlib/ctype/time/errno/assert）。
 - 关于ctype与unsigned char的要求：传参需为unsigned char或EOF。
 - strtol/qsort/strftime用法的权威参考文档与实现细节说明。
+- 示例A：安全字符串拷贝
+```c
+char dst[10]; strncpy(dst, src, sizeof(dst)-1); dst[sizeof(dst)-1]=0;
+```
+
+示例B：qsort使用
+```c
+int cmp(const void* a, const void* b){ return *(int*)a - *(int*)b; }
+qsort(arr, n, sizeof(int), cmp);
+```
+
+## 更多练习参考答案
+- atoi：strtol with endptr check.
+- qsort：define cmp func for struct field.
+- 日志：time(NULL), localtime, strftime.
