--- a/data/homepage/c-language/c_010.md
+++ b/data/homepage/c-language/c_010.md
@@ -1,4 +1,4 @@
-# 高级主题Ⅱ：模块化、构建与可移植性实践
+# C语言高级主题：工程实践
 
 目标：掌握多文件组织、库的构建与链接、跨平台可移植性、编译优化与调试工具链；提供工程化最佳实践。
 
@@ -7,30 +7,40 @@
 - 导出与隐藏符号：extern 与 static；链接可见性控制（编译器属性）
 - 头文件API设计：最小暴露、清晰文档、版本化、错误码体系
 
-## 2. 构建系统
-- Make 与 CMake 基础；目标、依赖与规则
+## 2. 模块化
+- 头文件：声明 vs 定义；前向声明减少依赖
+- 链接：extern, static
+
+## 3. 构建系统
+- Makefile：rules, variables, phony targets
+- CMake：project, add_executable, target_link_libraries
 - 编译器选项：-Wall -Wextra -Werror -O2/-O3 -g -fsanitize=address,undefined,thread
 - 条件编译处理平台差异；封装平台接口
 
-## 3. 可移植性与ABI
-- 基本类型尺寸与字节序；对齐与打包
-- 文件路径/编码/行结束差异；套接字/线程API差异
-- 使用 feature test 宏与配置脚本（如CMake的CheckFunctionExists）
+## 4. 可移植性
+- 平台差异：endianness (htons), sizeof, signedness
+- 条件编译：#ifdef __linux__ etc.
 
-## 4. 调试与分析
+## 5. 调试与分析
 - 调试：gdb/lldb；断点、回溯、观察点
 - 静/动分析：clang-tidy、cppcheck（也适用于C）、valgrind/asan/ubsan
 - 性能分析：perf/gprof、采样与插桩、剖析热点
 
-## 5. 最佳实践清单
-- 明确所有权与生命周期；接口以不变式与前置条件为中心
-- 错误处理一致化；返回码与errno配合，日志可控
-- 封装平台差异；持续集成构建与测试
+## 6. 最佳实践
+- 代码风格：consistent naming, comments
+- 错误处理：check returns, use errno
+- 安全：bounds checking, no buffer overflows
+- CI：GitHub Actions for build/test
 
-## 6. 练习
-- 使用CMake创建一个静态库与一个可执行程序，演示链接过程。
-- 为同一套API分别实现Windows与POSIX版本，使用条件编译选择。
-- 编写Makefile，加入asan/ubsan选项并运行示例程序。
+## 7. 练习
+- 写Makefile多文件项目。
+- 用CMake构建库。
+- 调试内存泄漏用valgrind。
+
+## 更多练习参考答案
+- Makefile：dependencies, clean target。
+- CMake：install, tests with ctest。
+- valgrind：fix leaks in sample code。
 
 ## 更多示例
 
@@ -93,11 +103,6 @@ endif()
 示例F：CI建议
 - 在CI中启用 -Wall -Wextra -Werror，运行单元测试与Sanitizer构建。
 - 不同平台（Windows/Linux/macOS）矩阵编译，验证可移植性。
-
-## 练习参考答案（节选）
-- CMake静态库与可执行：add_library与add_executable后用target_link_libraries连接；安装可用install(TARGETS ...)。
-- 跨平台实现：将平台差异封装到platform.h/.c，用条件编译选择实现；对外暴露统一API。
-- Makefile中asan/ubsan：编译与链接都需加入相应选项；确保-g保留符号便于栈回溯。
 
 ## 参考资料
 - CMake 官方文档与Modern CMake最佳实践。
